--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
 			</div>
 		</div>
 	</div>
+	<!--Portafolio-->
   <h4> Designed by <a id='link' href='https://ricardoblanco95.github.io/' target='_blank'>Ricardo Blanco</a></h4>
 </div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>  
 
   
 
